fix(symbols): align math img answers to radio buttons

--- a/Content/Styles/Symbols/Site.scss
+++ b/Content/Styles/Symbols/Site.scss
@@ -124,6 +124,10 @@ html, body {
   padding: 5px;
 }
 
+.number img {
+  margin: -5px 5px 0;
+}
+
 .languagedivider {
   margin: 0px;
   height: 0px;
